# homeassistant

./: .gitignore  README.md
ESPHome YAML/: ceiling-alarm-1.yaml
P4 Touch Panels/: .gitignore  README.md
P4 Touch Panels/panel_firmware/: CMakeLists.txt  partitions.csv  (+2 more)
P4 Touch Panels/panel_firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_prefs.c  app_prefs.h  ha_mqtt.c  ha_mqtt.h  idf_component.yml  main.c  ota_update.c  ota_update.h  reolink_preview.c  reolink_preview.h
P4 Touch Panels/panel_firmware/main/assets/: lottie_startup.json
P4 Touch Panels/panel_firmware/main/ui/: nav.c  nav.h  ui_brand_gradient.c  ui_brand_gradient.h  ui_colors.h  ui_dashboard_gradient.c  ui_dashboard_gradient.h  ui_idle_timeout.c  ui_idle_timeout.h  ui_layout.h  ui_layout_grid.c  ui_layout_grid.h  ui_screen_template.c  ui_screen_template.h  ui_shell.c  ui_shell.h  ui_visual_tokens.h  ui_watchdog.c  ui_watchdog.h
P4 Touch Panels/panel_firmware/main/ui/components/: ui_app_launcher_tile.c  ui_app_launcher_tile.h  ui_box_1.c  ui_box_1.h  ui_button_1.c  ui_button_1.h  ui_climate_control_1.c  ui_climate_control_1.h  ui_gate_action.c  ui_gate_action.h  ui_gauge_1.c  ui_gauge_1.h  ui_grid_icon_button.c  ui_grid_icon_button.h  ui_single_selector_tab_1.c  ui_single_selector_tab_1.h  ui_status_bar.c  ui_status_bar.h
P4 Touch Panels/panel_firmware/main/ui/fonts/: README.md  ui_font_home_assistant_icons_56.c  ui_home_assistant_icon_glyphs.h
P4 Touch Panels/panel_firmware/main/ui/screens/: screen_about.c  screen_about.h  screen_dashboard.c  screen_dashboard.h  screen_front_door.c  screen_front_door.h  screen_front_gate.c  screen_front_gate.h  screen_home.c  screen_home.h  screen_loading.c  screen_loading.h  screen_ollie.c  screen_ollie.h  screen_ota_progress.c  screen_ota_progress.h  screen_pipboy.c  screen_pipboy.h  screen_placeholder.c  screen_placeholder.h  screen_settings.c  screen_settings.h  screen_study.c  screen_study.h
(+26 files in other folders)
