idf_component_register(
    SRCS
        "main.c"
        "app_prefs.c"
        "ota_update.c"
        "ha_mqtt.c"
        "reolink_preview.c"
        "ui/ui_shell.c"
        "ui/ui_layout_grid.c"
        "ui/ui_screen_template.c"
        "ui/ui_brand_gradient.c"
        "ui/ui_dashboard_gradient.c"
        "ui/nav.c"
        "ui/ui_idle_timeout.c"
        "ui/screens/screen_loading.c"
        "ui/screens/screen_home.c"
        "ui/screens/screen_ollie.c"
        "ui/screens/screen_placeholder.c"
        "ui/screens/screen_dashboard.c"
        "ui/screens/screen_front_gate.c"
        "ui/screens/screen_pipboy.c"
        "ui/screens/screen_settings.c"
        "ui/screens/screen_about.c"
        "ui/screens/screen_study.c"
        "ui/screens/screen_ota_progress.c"
        "ui/components/ui_app_launcher_tile.c"
        "ui/components/ui_grid_icon_button.c"
        "ui/components/ui_box_1.c"
        "ui/components/ui_button_1.c"
        "ui/components/ui_single_selector_tab_1.c"
        "ui/components/ui_climate_control_1.c"
        "ui/fonts/ui_font_home_assistant_icons_56.c"
        "ui/components/ui_status_bar.c"
        "ui/components/ui_gauge_1.c"
    INCLUDE_DIRS
        "."
    EMBED_FILES
        "assets/lottie_startup.json"
    REQUIRES
        esp32_p4_wifi6_touch_lcd_4b
        espressif__esp_hosted
        espressif__esp_wifi_remote
        esp_event
        esp_netif
        esp_wifi
        mqtt
        nvs_flash
        esp_http_client
        esp_https_ota
        app_update
        esp_app_format
        json
        mbedtls
        esp_partition
        espressif__esp_new_jpeg
        esp_timer
)

target_compile_definitions(${COMPONENT_LIB} PRIVATE
    FW_VER_MAJOR=${FW_VER_MAJOR}
    FW_VER_MINOR=${FW_VER_MINOR}
    FW_VER_PATCH=${FW_VER_PATCH}
)
